--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
 						</div>
 						<div class="include__benefits">
 							<div class="include__benefits-title">How Will This Benefit You?
-								<img src="img/head.png" alt="">
+								<img src="img/head.svg" alt="">
 
 							</div>
 							<div class="include__benefits-list">
